# DSPScoper

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DSPScoper.fbp  DSPScoper.sln  DSPScoper.vcxproj  DSPScoper.vcxproj.filters  DigitalFilter.fbp  MainFrameUI.cpp  MainFrameUI.h  Mainframe.cpp  Mainframe.h  README.md  filter.cpp  filter.h  filterthread.cpp  filterthread.h  main.cpp  mathplot.cpp  mathplot.h  noname.cpp  noname.h  resource.h  signal.cpp  signal.h  wxwidgets-digital-filters.rc  wxwidgets-digital-filters.sln  wxwidgets-digital-filters.vcxproj  wxwidgets-digital-filters.vcxproj.filters
UI/: DigitalFilter.fbp
calc/: coefstrategy.cpp  coefstrategy.h  filter.cpp  filter.h  signal.cpp  signal.h
plot/: mathplot.cpp  mathplot.h  plot.cpp  plot.h
src/: CMakeLists.txt  main.cpp
src/calc/: CMakeLists.txt  filter.cpp  filter.h  signal.cpp  signal.h
src/calc/filter/: bessel.h
src/ui/: CMakeLists.txt  GUI.cpp  GUI.h  MainFrame.cpp  MainFrame.h  MainFrameUI.cpp  MainFrameUI.h
src/ui/plot/: CMakeLists.txt  mathplot.cpp  mathplot.h  plot.cpp  plot.h
ui/: MainFrameUI.cpp  MainFrameUI.h
